Update title and structure of secure page

--- a/pagina segura.html
+++ b/pagina segura.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Login Seguro</title>
+  <title>holaa este no es</title>
   <style>
     body {
       margin: 0;
@@ -88,3 +88,4 @@
 
 </body>
 </html>
+
